# incremental-backup-manager

./: .gitignore  README.md  api.md  functionality.md
Asynchronous IO/: CMakeLists.txt  asio_generic_server.h  chat_handler.cpp  chat_handler.h  main.cpp
Client/: Action.h  Buffer.h  CMakeLists.txt  Client.cpp  Client.h  Debug.h  FileWatcher.cpp  FileWatcher.h  Hash.cpp  Hash.h  ResponseBuffer.cpp  ResponseBuffer.h  main.cpp  path
Client/dirB2/ccs/: loremipsumX  test with space    tt 
Client/dirB2/dir1/: loremipsum
Client/dirB2/dirC/: loremipsumX
Client/restore/: loremipsumX
Client/restore/ccs/: data  loremipsumX  prova  test with space    tt 
Client/restore/dir1/: loremipsum
Client/restore/dirC/: loremipsumX
ProvaFileCLIENT/: CMakeLists.txt  main.cpp
ProvaFileCLIENT/client/: Client.h  FileWatcher.h  fileWatcherTest.h
ProvaFileSERVER/: CMakeLists.txt  chat_handler.cpp  chat_handler.h
Remote backup/: CMakeLists.txt  main.cpp
Remote backup/client/: Buffer.h  Client.cpp  Client.h  FileWatcher.cpp  FileWatcher.h
Server/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  Database.cpp  Database.h  Debug.h  Hash.cpp  Hash.h  Server.cpp  Server.h  database  database.sqlite3  main.cpp  provaprovaprova
Server/dir2/dirB2/: loremipsumNEW
Server/dir3/dirB2/: loremipsum
Server/dirA/: loremipsum  loremipsumNEW
provaMetadati/: CMakeLists.txt  boh  main.cpp
provaSQL/: CMakeLists.txt  db  db.sqlite3  main.cpp
testOpenSSL/: CMakeLists.txt  example.txt  example2.txt  main.cpp
